--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "eslint-config-next": "13.2.4",
     "firebase": "^9.18.0",
     "firebase-admin": "^11.5.0",
+    "mongodb": "^5.1.0",
     "next": "13.2.4",
+    "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
