implement mongodb connection

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 GOOGLE_CLIENT_ID=GOOGLE_CLIENT_ID
 GOOGLE_CLIENT_SECRET=GOOGLE_CLIENT_SECRET
+
+MONGODB_USER=MONGODB_USER
+MONGODB_PASSWORD=MONGODB_PASSWORD
+MONGODB_URI=MONGODB_URI
