--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ GOOGLE_CLIENT_SECRET=GOOGLE_CLIENT_SECRET
 MONGODB_USER=MONGODB_USER
 MONGODB_PASSWORD=MONGODB_PASSWORD
 MONGODB_URI=MONGODB_URI
+
+BASE_FETCH_URL=http://localhost:3000/
