--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-intersection-observer": "^9.4.3"
   },
   "devDependencies": {
     "standard": "^17.0.0"
