--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "react-intersection-observer": "^9.4.3"
   },
   "devDependencies": {
-    "standard": "^17.0.0"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "standard": "^17.0.0",
+    "tailwindcss": "^3.3.1"
   }
 }
