add upload profile picture feature

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,12 @@ MONGODB_PASSWORD=MONGODB_PASSWORD
 MONGODB_URI=MONGODB_URI
 
 BASE_FETCH_URL=http://localhost:3000/
+
+FIREBASE
+NEXT_PUBLIC_FBAPIKEY=FBAPIKEY
+NEXT_PUBLIC_FBAUTHDOMAIN=FBAUTHDOMAIN
+NEXT_PUBLIC_FBPROJECTID=FBPROJECTID
+NEXT_PUBLIC_FBSTORAGEBUCKET=FBSTORAGEBUCKET
+NEXT_PUBLIC_FBMESSAGINGSENDERID=FBMESSAGINGSENDERID
+NEXT_PUBLIC_FBAPPID=FBAPPID
+NEXT_PUBLIC_FBMEASUREMENTID=FBMEASUREMENTID
