--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "compressorjs": "^1.2.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
-    "firebase": "^9.18.0",
+    "firebase": "^9.21.0",
     "firebase-admin": "^11.5.0",
     "mongodb": "^5.1.0",
     "next": "13.2.4",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "encoding": "^0.1.13",
     "postcss": "^8.4.21",
     "standard": "^17.0.0",
     "tailwindcss": "^3.3.1"
