--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "encoding": "^0.1.13",
+    "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.21",
     "standard": "^17.0.0",
     "tailwindcss": "^3.3.1"
