add next secret

--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,5 @@ NEXT_PUBLIC_FBSTORAGEBUCKET=FBSTORAGEBUCKET
 NEXT_PUBLIC_FBMESSAGINGSENDERID=FBMESSAGINGSENDERID
 NEXT_PUBLIC_FBAPPID=FBAPPID
 NEXT_PUBLIC_FBMEASUREMENTID=FBMEASUREMENTID
+
+NEXT_SECRET=NEXT_SECRET
