--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,8 @@ NEXT_PUBLIC_FBAPPID=FBAPPID
 NEXT_PUBLIC_FBMEASUREMENTID=FBMEASUREMENTID
 
 NEXT_SECRET=NEXT_SECRET
+
+
+MERCADOPAGO
+MP_ACCESS_TOKEN=MP_ACCESS_TOKEN
+NEXT_PUBLIC_MP_PUBLIC_KEY=MP_PUBLIC_KEY
