--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mercadopago/sdk-react": "^0.0.10",
     "compressorjs": "^1.2.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "firebase": "^9.21.0",
     "firebase-admin": "^11.5.0",
+    "mercadopago": "^1.5.16",
     "mongodb": "^5.1.0",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
